--- a/php7-fpm/Dockerfile
+++ b/php7-fpm/Dockerfile
@@ -1,5 +1,5 @@
 # See https://github.com/docker-library/php/blob/master/7.1/fpm/Dockerfile
-FROM php:7.1-fpm
+FROM php:7.2.0-fpm-stretch
 ARG TIMEZONE
 
 MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
@@ -23,7 +23,7 @@ RUN docker-php-ext-install pdo pdo_mysql
 
 
 # install xdebug
-RUN pecl install xdebug
+RUN pecl install xdebug-2.6.0alpha1
 RUN docker-php-ext-enable xdebug
 RUN echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN echo "display_startup_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
