--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ${SYMFONY_APP_PATH}/var/log:/var/www/symfony/var/log
+        environment:
+           - PHP_IDE_CONFIG
     nginx:
         build: nginx
         ports:
